2005-12-03 Karsten Behrmann <BearPerson@sourcemage.org>
	* mkinitrd, iso.command, isolinux.{cfg,msg}, yaboot.{conf,msg}:
	  Insert initrd size and grimoire version just before rolling the ISO
	  (bug 9200)
	* skeleton/etc/{group,passwd,shadow}: add/move standard groups
	* skeleton/share/smgl.install/group-descriptions, modules/installation,
	  skeleton/usr/sbin/fancy-useradd.sh: fancy user addition script (9812)
	* diskStructure: uppercase button

2005-12-1 David Kowis <dkowis@sourcemage.org>
	* diskStructure: fixed bug #9809, Made a menu a bit more intellgently
	  named

2005-11-26 Karsten Behrmann <BearPerson@sourcemage.org>
	* config-2.6.ppc: enable early boot debugging console

2005-11-23 Karsten Behrmann <BearPerson@sourcemage.org>
	* deps-optional, deps-required: added some automated dependency tracking
	* 10common: quench half-expected error messages
	* architecture, timezone: add functions for when a step was skipped
	* bootloader, debug, installation, kernel, nativeLanguageSupport,
	  network, optionalSpell, services, timezone: more dialog auto-sizing
	* debug: fix annoying bug with exit code
	* diskStructure: fix md partition parsing; more intelligently exclude
	  partitions in an md array; fix partition list
	* installation: automate dependency checks ; add capability to auto-run
	  some code for skipped steps.
	* kernel: sanity-check system date for the kernel gpg check
	* nativeLanguageSupport: add dependencies; add keymap_auto()
	* optionalSpell: fix cross-mounting of /dev
	* syslog: jump out early when no logger is selected

2005-11-20 Karsten Behrmann <BearPerson@sourcemage.org>
	* skeleton/etc/issue: change to not include ISO version (9811)
	* install-list, optional-list: install sorcery-pubkeys automatically
	* skeleton/etc/sorcery/local/config: check gpg by default (both 9768)
	* installer.sh: rename Native Language menu (9771)
	* diskStructure: fail out with no disks/partitions (9764)