@@ -1,3 +1,3 @@
   GPG_VERIFY_SORCERY="on"
  GPG_VERIFY_GRIMOIRE="on"
-        ARCHITECTURE="i486"
+        ARCHITECTURE="g3"
