@@ -143,7 +143,7 @@ bl_grub_install() {
   # locate file)
 
   create_etc_mtab &&
-  chroot_cmd grub-install --no-floppy "$1"
+  try_run -e "installing grub" chroot_cmd grub-install --no-floppy "$1"
 
   debug_enter "bootloader" 2
 
@@ -180,7 +180,7 @@ bl_lilo_config() {
 
 bl_lilo_install() {
 
-  chroot_cmd lilo -v
+  try_run -e "installing lilo" chroot_cmd lilo -v
 
   debug_enter "bootloader" 2
 
@@ -241,7 +241,7 @@ bl_yaboot_install() {
 
   # we use --nonvram since we don't have nvsetenv installed
 
-  chroot_cmd ybin --nonvram
+  try_run -e "installing yaboot" chroot_cmd ybin --nonvram
 
   debug_enter "bootloader" 2
 
