@@ -112,8 +112,8 @@ Alternatively, I can just use the linux defaults." 0 0 \
     # link is resolved by the linux spell
   fi
 
-  sed -i -e 's/^MAKEMODE=.*/MAKEMODE="menuconfig"/' \
-         -e 's/^CONFIG_KERNEL=.*/CONFIG_KERNEL="y"/' \
+  try_run sed -i -e 's/^MAKEMODE=.*/MAKEMODE="menuconfig"/'  \
+                 -e 's/^CONFIG_KERNEL=.*/CONFIG_KERNEL="y"/' \
     $TARGET/etc/sorcery/local/depends/linux.p
 
   touch $TARGET/etc/sorcery/local/makefile.patches
