@@ -62,11 +62,13 @@ sv_enable_scripts() {
 
   while read line ;do
     grep -q "^$line$" $TMP_DIR/prevenabled-scripts || # no already-enabled ones
-    chroot_cmd telinit bootenable "$line" <&2 # we hope stderr is the terminal
+    try_run -e "enabling init script failed" chroot_cmd telinit bootenable \
+      "$line" <&2 # we hope stderr is the terminal
   done <$TMP_DIR/enabled-scripts
   while read line ;do
     grep -q "^$line$" $TMP_DIR/prevdisabled-scripts ||
-    chroot_cmd telinit bootdisable "$line" <&2
+    try_run -e "disabling init script failed" chroot_cmd telinit bootdisable \
+      "$line" <&2
   done <$TMP_DIR/disabled-scripts
   rm -f $TMP_DIR/enabled-scripts $TMP_DIR/disabled-scripts
   rm -f $TMP_DIR/prevenabled-scripts $TMP_DIR/prevdisabled-scripts
